# franka_obstacle_avoidance

./: .gitignore  Dockerfile  LICENSE  README.md  connect_to_robot.md  docker-build.sh  docker-run-lukas.sh  docker-run.sh  package.xml  requirements.txt  run-docker-aware.sh  run-docker.sh  setup.cfg  setup.py
config/: config_ekin.rviz  config_with_human.rviz  conveyer_setup.rviz  franka_avoidance.rviz  franka_conveyer.rviz
examples/: example_cartesian_custom_damping.py  example_cartesian_impedance.py  example_cartesian_twist.py  example_human_avoider.py  example_joint_space.py  example_nonlinear_controller.py  example_optitrack_obstacles.py  example_optitrack_rviz.py  example_pybullet_obstacles.py  idle_control.py
examples/example/: example_cartesian_twist.py
franka_avoidance/: control_repeater.py  controller_interface.py  flexi_limb_human.py  franka_joint_space.py  human_optitrack_container.py  multi_body_human.py  optitrack_container.py  optitrack_interface.py  robot_interface.py  rviz_handler.py  trajectory_publisher.py  velocity_publisher.py
launch/: franka.launch.py
local/: README.md
rviz/: README.md  franka_obstacle.rviz
scripts/: cartesian_with_custom_damping.py  example_cartesian_twist.py  example_joint_space.py  idle_control.py  main.py  nonlinear_avoider.py
scripts/examples/: example_cartesian_twist.py  example_joint_space.py  example_optitrack_obstacles.py
src/franka_avoidance/: obstacles_optitrack.py  optitrack_container.py  optitrack_interface.py  partial_filter.py  pybullet_handler.py  robot_interface.py  rviz_handler.py  state_filters.py
