[metadata]
name = franka_obstacle_avoidance
description = ROS2/ZMQ Implementation for For Franka Obstacle Avoidance
long_description = file: README.md
author = Lukas Huber
license = "Mozilla license"
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
# test_suite="tests,

[options]
packages =
    src
python_requires = >=3.6

# [options.extras_require]
# testing =
    # pytest>=6.0
    # pytest-cov>=2.0
    # mypy>=0.910
    # flake8>=3.9
    # tox>=3.24

[flake8]
max-line-length = 160

[pylint]
max-line-length = 88


